--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <br/>
         <br/>
         <span id="result"></span><br/><br/>
+		<div id="warning"></div>
         <span id="count"></span>
 
 <script src="./ca.js"></script>
