Update index.html with some general hints

--- a/index.html
+++ b/index.html
@@ -10,8 +10,20 @@
         <br/>
         <br/>
         <span id="result"></span><br/><br/>
+        <span id="count"></span><br/><br/>
+		<div id="info">
+		La partició de mots ha de respectar les síl·labes de cada paraula segons aquestes directrius:
+		<ul>
+		<li>Els diftongs no se separen: fei-na, sau-na, pa-rai-gua, Pas-qua.</li>
+		<li>Els hiatus se separen: ci-èn-ci-a, es-ca-ient.</li>
+		<li>Els dígrafs ll, ny, gu, qu no se separen: fa-lle-ra, es-ca-nya, fi-gues, es-que-na.</li>
+		<li>Els dígrafs o grups de lletres l·l, rr, ss, ix, sc, tg i tx sí que se separen. En el cas de la l·l se substitueix el punt volat amb el guionet: il-lu-sa, car-rer, fai-xa, pis-ci-na, plat-ges, cot-xes.</li>
+		<li>En el cas de mots compostos, la partició es fa a cada component de forma independent: cel-obert, nos-altres.</li>
+		<li>En el cas de mots amb guionet, s'admet la partició en aquest caràcter: agafem-ho, gara-gara.</li>
+		<li>No s'ha de deixar una lletra sola a començament ni a final de ratlla, però és possible si va apostrofat: ami-ga, l'a-mi-ga.</li>
+		</ul>
+		</div>
 		<div id="warning"></div>
-        <span id="count"></span>
 
 <script src="./ca.js"></script>
 <script src="./hyphen.js"></script>
