--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  </head>
  <body>
    <h1>Separador i comptador de síl·labes</h1>
-        Introduïu un text: <input type="text" id="text_to_hyphen" onchange="onChangeFunction()">
+        Introduïu un text: <input type="text" id="text_to_hyphen" onkeyup="onChangeFunction()">
         <br/>
         <br/>
         <span id="result"></span><br/><br/>
