--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
  </head>
  <body>
    <h1>Separador i comptador de síl·labes</h1>
-        Introduïu un text: <input type="text" id="text_to_hyphen" onkeyup="onChangeFunction()">
+   <textarea rows="4" cols="50" placeholder="Introduïu una paraula, una frase o un poema" id="text_to_hyphen" onkeyup="onChangeFunction()"></textarea>
+
         <br/>
         <br/>
         <span id="result"></span><br/><br/>
