--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
  <meta charset="UTF-8">
     <title>Separador i comptador de síl·labes</title>
  </head>
+ <style>
+     td {
+         padding-right: 10px;
+     }
+ </style>
  <body>
    <h1>Separador i comptador de síl·labes</h1>
-   <textarea rows="4" cols="50" placeholder="Introduïu una paraula, una frase o un poema" id="text_to_hyphen" onkeyup="onChangeFunction()"></textarea>
+   <textarea rows="6" cols="80" placeholder="Introduïu una paraula, una frase o un poema" id="text_to_hyphen" onkeyup="onChangeFunction()"></textarea>
 
         <br/>
         <br/>
         <span id="result"></span><br/><br/>
-		<div id="warning"></div>
+        <div id="warning"></div>
         <span id="count"></span>
 
 <script src="./ca.js"></script>
