Make textarea responsive

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
      td {
          padding-right: 10px;
      }
+     #text_to_hyphen {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        width: 100%;
+     }
  </style>
  <body>
    <h1>Separador i comptador de síl·labes</h1>
