--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  </style>
  <body>
    <h1>Separador i comptador de síl·labes</h1>
-   <textarea rows="6" cols="80" placeholder="Introduïu una paraula, una frase o un poema" id="text_to_hyphen" onkeyup="onChangeFunction()"></textarea>
+   <textarea rows="6" cols="80" placeholder="Introduïu una paraula, una frase o un poema" id="text_to_hyphen" oninput="onChangeFunction()"></textarea>
 
         <br/>
         <br/>
