--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
          padding-right: 10px;
      }
      #text_to_hyphen {
-        -webkit-box-sizing: border-box;
+        /*-webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
         box-sizing: border-box;
-        width: 100%;
+        width: 100%;*/
      }
  </style>
  <body>
